...
    <string name="dialog_button_keep_notes">Keep Notes</string>
    <string name="dialog_button_upload">Upload</string>
    <string name="dialog_button_download">Download</string>
    <string name="dialog_button_continue">Continue</string>
    <string name="dialog_button_settings">Settings</string>
    <string name="dialog_button_retry">Retry</string>
    <string name="laano_tab_links_title">Links</string>
    <string name="laano_tab_favorites_title">Favorites</string>
    <string name="laano_tab_notes_title">Notes</string>
    <string name="laano_permission_get_accounts">GET ACCOUNTS (Contacts) permission is needed to show the list of existing accounts</string>
    <string name="laano_account_added">A new account has been added</string>
    <string name="laano_offline">Application offline, please enable Internet connection</string>
    <string name="laano_not_syncable">Unable to access the Cloud storage, please log in again</string>
    <string name="laano_shortcut_add_link">Add Link</string>
...
    <string name="item_manage_accounts_logo">Account</string>
    <string name="manage_accounts_removal_confirmation_title">Delete confirmation</string>
    <string name="manage_accounts_removal_confirmation_message">Delete account %s?\n\nThis action cannot be undone.</string>
    <string name="manage_accounts_account_updated">The account has been successfully updated</string>
    <string name="action_mode_favorites_delete">Delete</string>
    <string name="action_mode_favorites_select_all">Select/Deselect all Favorites</string>
    <string name="laano_favorites_action_mode_selected">%1$d of %2$d selected</string>
    <string name="sync_adapter_title_failed_default">Synchronization failed</string>
    <string name="sync_adapter_title_failed_login">log in again</string>
    <string name="sync_adapter_text_failed_login">Cannot access the account, please log in again</string>
    <string name="sync_adapter_title_failed_database">reinstall the application</string>
    <string name="sync_adapter_text_failed_database">Database is corrupted, please reinstall the application</string>
    <string name="sync_adapter_title_failed_cloud">check Cloud storage</string>
    <string name="sync_adapter_text_failed_cloud_access">Cannot access the Cloud storage, please check if it works</string>
    <string name="sync_adapter_text_failed_cloud_profile">Cannot retrieve profile data, please check Cloud storage</string>
    <string name="sync_adapter_text_failed">Problem on the Cloud storage with: %s</string>
    <string name="sync_adapter_sync_channel_name">Sync channel</string>
    <string name="sync_adapter_sync_channel_description">Notifications regarding sync with Cloud storage</string>
    <string name="laano_actionbar_manager_sync_title">Up: %1$d / dl: %2$d</string>
    <string name="toolbar_favorites_item_action_mode">Switch to Edit mode</string>
    <string name="toolbar_favorites_item_clear_clipboard">Clear clipboard</string>
    <string name="toolbar_favorites_item_filter">Favorite filter</string>
    <string name="toolbar_favorites_search">Search</string>
    <string name="toolbar_favorite_item_paste">Fill in form</string>
    <string name="favorites_delete_confirmation_title">Delete confirmation</string>
    <string name="dialog_favorite_conflict_title_local">Local:</string>
...
