...
                app:srcCompat="@drawable/ic_chevron_left"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/favorite_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/recycler_view_left_checkbox_margin_start"
                android:contentDescription="@string/item_favorites_checkbox"
                android:visibility="@{viewModel.actionMode ? View.VISIBLE : View.GONE}"
                android:checked="@{viewModel.isSelected(favorite.id, viewModel.selectionChanged)}"
...
                app:srcCompat="@drawable/ic_chevron_right"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageButton
                android:id="@+id/favorite_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/item_favorites_edit_button"
                android:paddingTop="@dimen/recycler_view_button_padding_vertical"
                android:paddingBottom="@dimen/recycler_view_button_padding_vertical"
                android:paddingStart="@dimen/recycler_view_button_padding"
...
